--- a/lista-compras.html
+++ b/lista-compras.html
@@ -21,16 +21,17 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>1</td>
-        <td>Arroz</td>
-        <td><input type="checkbox" /></td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>Maça</td>
-        <td><input type="checkbox" /></td>
-      </tr>
+      @for (elemento of lista; track elemento.id) {
+        <tr>
+          <td>{{ elemento.id }}</td>
+          <td>{{ elemento.nome }}</td>
+          <td><input type="checkbox" /></td>
+        </tr>
+      } @empty {
+        <tr colspan="3">
+          Nenhum item adicionado.
+        </tr>
+      }
     </tbody>
   </table>
 </div>
