--- a/lista-compras.html
+++ b/lista-compras.html
@@ -10,6 +10,8 @@
       placeholder="Digite o nome do item"
     />
     <button type="submit">Adicionar</button>
+
+    <button type="button" (click)="limparLista()">Limpar Lista</button>
   </form>
 
   <table>
@@ -24,8 +26,12 @@
       @for (elemento of lista; track elemento.id) {
         <tr>
           <td>{{ elemento.id }}</td>
-          <td>{{ elemento.nome }}</td>
-          <td><input type="checkbox" /></td>
+          <td>
+            <span [ngClass]="{ 'item-riscado': elemento.comprado }">{{ elemento.nome }}</span>
+          </td>
+          <td>
+            <input type="checkbox" (click)="riscaritem(elemento)" [checked]="elemento.comprado" />
+          </td>
         </tr>
       } @empty {
         <tr colspan="3">
